Complete Iteration 2: Recipe Page

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
     <body>
         <h1>Odin Recipes</h1>
+        <a href="recipes/easy-cuban-picadillo.html">Easy Cuban Picadillo</a>
     </body>
-
 </html>
 
