Add and resize image

--- a/recipes/easy-cuban-picadillo.html
+++ b/recipes/easy-cuban-picadillo.html
@@ -7,5 +7,6 @@
 
     <body>
         <h1>Easy Cuban Picadillo</h1>
+        <img src="../img/Easy-Cuban-Picadillo.jpg" alt="Cuban Picadillo" width="400px"/>
     </body>
 </html>
