Complete Iteration 3: Recipe Page Content

--- a/recipes/easy-cuban-picadillo.html
+++ b/recipes/easy-cuban-picadillo.html
@@ -8,5 +8,25 @@
     <body>
         <h1>Easy Cuban Picadillo</h1>
         <img src="../img/Easy-Cuban-Picadillo.jpg" alt="Cuban Picadillo" width="400px"/>
+        <p>My girlfriend gave me this delicious recipe years ago. I've made it ever since for family and friends, and they all love it. My daughter loves to take leftovers to school for lunch the next day. -Marie Wielgus, <em>Wayne, New Jersey</em></p>
+        <h3>INGREDIENTS</h3>
+        <ul>
+            <li>1 pound lean ground beef (90% lean)</li>
+            <li>1 small green pepper, chopped</li>
+            <li>1/4 cup choppped onion</li>
+            <li>1 can (8 ounces) tomato saucce</li>
+            <li>1/4 cup raisins</li>
+            <li>1 tablespoon cider vinegar</li>
+            <li>2 cups hot cooked rice</li>
+            <li>Fresh cilantro leaves, optional</li>
+        </ul>
+
+        <h3>INSTRUCTIONS</h3>
+        <ol>
+            <li>In a large skillet, cook beef with pepper and onion over medium-high heat until no longer pink, 5-7 minutes; crumble beef. Stir in tomato sauce, olives, raisin s and vinegar; bring to a boil. Reduce heat; simmer, uncovered, until raisins are softened, 5-6 minutes.</li>
+            <li>Serve with rice. If desired, top with fresh cilantro to serve.</li>
+        </ol>
+        <p><a href="easy-cuban-picadillo.html">Return to top</a></p>
+        <p><a href="../index.html">Back to main page</a></p> 
     </body>
 </html>
