Italicize description under image

--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 
     <body>
         <h1>Odin Recipes</h1>
-        <a href="recipes/easy-cuban-picadillo.html">Easy Cuban Picadillo</a>
+        <a href="recipes/easy_cuban_picadillo.html">Easy Cuban Picadillo</a>
+        <p><a href="recipes/jamaican-style-beef-stew.html">Jamaican-Style Beef Stew</a></p>
     </body>
 </html>
 
