Add gif to main page

--- a/index.html
+++ b/index.html
@@ -6,9 +6,13 @@
     </head>
 
     <body>
-        <h1>Odin Recipes</h1>
-        <a href="recipes/easy_cuban_picadillo.html">Easy Cuban Picadillo</a>
-        <p><a href="recipes/jamaican-style-beef-stew.html">Jamaican-Style Beef Stew</a></p>
+        <h1>Island Recipes</h1>
+        <img src="img/devils-island-island.gif" alt="Swinging palm tree on miniature island. White clouds in blue sky" width="600px">
+        <ul>
+            <li><a href="recipes/easy-cuban-picadillo.html">Easy Cuban Picadillo</a></li>
+            <li><p><a href="recipes/jamaican-style-beef-stew.html">Jamaican-Style Beef Stew</a></p></li>
+            <li><p><a href="recipes/caribbean-shrimp-rice-bowl.html">Caribbean Shrimp & Rice Bowl</a></p></li>
+        </ul>
     </body>
 </html>
 
